--- a/J_Ketcham_AdvancedViews/app/src/main/res/layout/activity_jketcham__advanced_views.xml
+++ b/J_Ketcham_AdvancedViews/app/src/main/res/layout/activity_jketcham__advanced_views.xml
@@ -6,13 +6,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".JKetcham_AdvancedViews">
+    tools:context=".JKetcham_AdvancedViews"
+    android:weightSum="1">
 
-    <AdapterViewFlipper
+    <Spinner
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_weight="1" />
 
-
-        </AdapterViewFlipper>
 
 </LinearLayout>
