--- a/J_Ketcham_AdvancedViews/app/src/main/res/layout-land/activity_jketcham_advanced_views.xml
+++ b/J_Ketcham_AdvancedViews/app/src/main/res/layout-land/activity_jketcham_advanced_views.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -5,24 +6,23 @@
     tools:context=".JKetcham_AdvancedViews"
     android:weightSum="1">
 
-
     <Spinner
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
-        android:visibility="visible"/>
-
-    <ListView
-        android:layout_width="473dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
+        android:layout_weight="1"
         android:visibility="gone"/>
 
+    <ListView
+        android:layout_width="150dp"
+        android:layout_height="fill_parent"
+        android:id="@+id/listView"
+        android:visibility="visible"/>
 
     <TextView android:id="@+id/nameTextview"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="24sp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"/>
 
     <TextView android:id="@+id/professionTextview"
         android:layout_width="wrap_content"
