--- a/J_Ketcham_AdvancedViews/app/src/main/res/layout-land/data_layout.xml
+++ b/J_Ketcham_AdvancedViews/app/src/main/res/layout-land/data_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minHeight="50dp"
@@ -9,8 +9,16 @@
     <TextView android:id="@+id/nameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="10dp"
         android:textSize="14sp" />
 
-</LinearLayout>
+    <TextView android:id="@+id/professionText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@id/nameText"
+        android:textSize="12sp" />
+
+</RelativeLayout>
