--- a/J_Ketcham_AdvancedViews/app/src/main/res/layout-land/activity_jketcham_advanced_views.xml
+++ b/J_Ketcham_AdvancedViews/app/src/main/res/layout-land/activity_jketcham_advanced_views.xml
@@ -3,35 +3,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:weightSum="1"
     tools:context=".JKetcham_AdvancedViews"
-    android:weightSum="1">
+    android:orientation="horizontal">
 
     <Spinner
+        android:id="@+id/spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
         android:layout_weight="1"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <ListView
-        android:layout_width="150dp"
-        android:layout_height="fill_parent"
         android:id="@+id/listView"
-        android:visibility="visible"/>
+        android:layout_width="140dp"
+        android:layout_height="fill_parent"
+        android:visibility="visible"
+        android:layout_weight="0.05" />
 
-    <TextView android:id="@+id/nameTextview"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"/>
+        android:orientation="vertical">
 
-    <TextView android:id="@+id/professionTextview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"/>
+        <TextView
+            android:id="@+id/nameTextview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp" />
 
-    <TextView android:id="@+id/ageTextview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"/>
+        <TextView
+            android:id="@+id/professionTextview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/ageTextview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp" />
+
+        </LinearLayout>
+
+
 
 </LinearLayout>
