--- a/J_Ketcham_AdvancedViews/app/src/main/res/layout-land/activity_jketcham_advanced_views.xml
+++ b/J_Ketcham_AdvancedViews/app/src/main/res/layout-land/activity_jketcham_advanced_views.xml
@@ -16,7 +16,7 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="140dp"
+        android:layout_width="150dp"
         android:layout_height="fill_parent"
         android:visibility="visible"
         android:layout_weight="0.05" />
@@ -26,6 +26,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/profileImage"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginTop="10dp" />
+
         <TextView
             android:id="@+id/nameTextview"
             android:layout_width="wrap_content"
@@ -34,6 +40,12 @@
 
         <TextView
             android:id="@+id/professionTextview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/relationInfoText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp" />
