--- a/J_Ketcham_AdvancedViews/app/src/main/res/layout-land/data_layout.xml
+++ b/J_Ketcham_AdvancedViews/app/src/main/res/layout-land/data_layout.xml
@@ -6,18 +6,27 @@
     android:orientation="horizontal"
     android:gravity="center_vertical">
 
+    <ImageView
+        android:id="@+id/anImage"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="10dp"/>
+
     <TextView android:id="@+id/nameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@id/anImage"
         android:textSize="14sp" />
 
-    <TextView android:id="@+id/professionText"
+    <TextView android:id="@+id/professionInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@id/anImage"
         android:layout_below="@id/nameText"
         android:textSize="12sp" />
 
