--- a/J_Ketcham_AdvancedViews/app/src/main/res/layout/activity_jketcham__advanced_views.xml
+++ b/J_Ketcham_AdvancedViews/app/src/main/res/layout/activity_jketcham__advanced_views.xml
@@ -2,41 +2,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JKetcham_AdvancedViews"
+    android:orientation="vertical"
     android:weightSum="1"
-    android:orientation="vertical">
+    tools:context=".JKetcham_AdvancedViews">
 
 
     <Spinner
+        android:id="@+id/spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:visibility="visible"/>
+        android:visibility="visible" />
 
     <ListView
+        android:id="@+id/listView"
         android:layout_width="473dp"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
+    <ImageView
+        android:id="@+id/profileImage"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="10dp" />
 
-        <TextView
-            android:id="@+id/nameTextview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp" />
+    <TextView
+        android:id="@+id/nameTextview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/professionTextview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp" />
+    <TextView
+        android:id="@+id/professionTextview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/ageTextview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp" />
+    <TextView
+        android:id="@+id/relationInfoText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/ageTextview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
