--- a/JKConnectedApp/app/src/main/res/layout/activity_my.xml
+++ b/JKConnectedApp/app/src/main/res/layout/activity_my.xml
@@ -1,25 +1,21 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MyActivity">
+<?xml version="1.0" encoding="utf-8"?>
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <RelativeLayout
-        android:id="@+id/searchListView"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/serverView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginStart="30dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginStart="80dp"
             android:text="@string/Server"
             android:textSize="20sp" />
 
@@ -29,139 +25,48 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/serverView"
             android:layout_toRightOf="@+id/serverView"
-            android:layout_marginLeft="80dp"
-            android:layout_marginStart="80dp"
+            android:layout_marginLeft="100dp"
+            android:layout_marginStart="100dp"
             android:text="@string/GuildName"
             android:textSize="20sp" />
 
         <EditText
             android:id="@+id/serverEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
             android:layout_below="@+id/serverView"
             android:hint="@string/ServerHint"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp" />
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp" />
 
         <EditText
             android:id="@+id/guildEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
             android:layout_below="@+id/guildView"
             android:layout_toEndOf="@+id/serverEdit"
             android:layout_toRightOf="@+id/serverEdit"
             android:hint="@string/GuildNameHint"
-            android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp" />
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
+            android:layout_marginLeft="65dp"
+            android:layout_marginStart="65dp" />
 
         <Button
             android:id="@+id/enterBTN"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/guildEdit"
+            android:layout_toRightOf="@+id/guildEdit"
+            android:text="@string/ButtonName"
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"/>
+
+        <GridView
+            android:id="@+id/gridView"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:text="@string/ButtonName" />
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-    <Spinner
-        android:id="@+id/spinnerView"
-        android:layout_width="fill_parent"
-        android:layout_height="55dp"
-        android:visibility="visible" />
-
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="200dp"
-        android:layout_height="fill_parent"
-        android:visibility="gone" />
-
-    <com.loopj.android.image.SmartImageView
-        android:id="@+id/profilePic"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/ic_launcher"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:id="@+id/nameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/profilePic"
-        android:textSize="18sp"
-        android:text="@string/GuildName"
-        android:layout_centerHorizontal="true"/>
-        <!--android:layout_marginTop="215dp"-->
-        <!--android:layout_marginLeft="115dp"-->
-        <!--android:layout_marginStart="115dp"-->
-
-
-    <TextView
-        android:id="@+id/classText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginStart="75dp"
-        android:text="@string/GuildName"/>
-
-    <TextView
-        android:id="@+id/raceText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="265dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginStart="75dp"
-        android:text="@string/GuildName" />
-
-    <TextView
-        android:id="@+id/lvlText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="290dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginStart="75dp"
-        android:text="@string/GuildName" />
-
-    <TextView
-        android:id="@+id/specNameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
-        android:layout_marginLeft="175dp"
-        android:layout_marginStart="175dp"
-        android:text="@string/GuildName" />
-
-    <TextView
-        android:id="@+id/specRoleText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="265dp"
-        android:layout_marginLeft="175dp"
-        android:layout_marginStart="175dp"
-        android:text="@string/GuildName" />
-
-    <TextView
-        android:id="@+id/specDescText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="290dp"
-        android:layout_marginLeft="175dp"
-        android:layout_marginStart="175dp"
-        android:text="@string/GuildName" />
+            android:layout_height="wrap_content"
+            android:numColumns="2"
+            android:layout_below="@id/guildEdit" />
 
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
